--- a/app/src/main/res/drawable/ic_baseline_school_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_school_24.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    >
+    android:tint="@color/button_text_color">
   <path
       android:fillColor="@color/button_text_color"
-      android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+      android:pathData="M5,13.18v4L12,21l7,-3.82v-4L12,17l-7,-3.82zM12,3L1,9l11,6 9,-4.91V17h2V9L12,3z"/>
 </vector>
