--- a/app/src/main/res/drawable/ic_baseline_store_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_store_24.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    >
+    android:tint="@color/button_text_color">
   <path
       android:fillColor="@color/button_text_color"
-      android:pathData="M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z"/>
+      android:pathData="M20,4L4,4v2h16L20,4zM21,14v-2l-1,-5L4,7l-1,5v2h1v6h10v-6h4v6h2v-6h1zM12,18L6,18v-4h6v4z"/>
 </vector>
