--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -15,63 +15,90 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/cardview_margin_vertical"
         android:layout_marginBottom="@dimen/cardview_margin_vertical"
+        android:contentDescription="Location Card. Tap to start navigation"
         app:cardBackgroundColor="#FFFFFF"
+        app:contentPadding="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/place_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="6dp"
+                android:layout_weight="1"
+                android:background="@color/background_color"
+                android:padding="4dp"
+                android:text="@{place.name}"
+                android:textAlignment="center"
+                android:textColor="@color/text_color"
+                android:textSize="24sp" />
 
             <LinearLayout
-                android:id="@+id/linearLayout3"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.7"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/place_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                <LinearLayout
+                    android:id="@+id/linearLayout3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="@{place.name}"
-                    android:textColor="#000000" />
+                    android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/place_distance"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+
+                    <TextView
+                        android:id="@+id/place_distance"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_weight="0.5"
+                        android:text="@{place.distanceString}"
+                        android:textColor="#000000"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/start_nav_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_weight="0.5"
+                        android:text="Tap To Start Navigation"
+                        android:textColor="#000000"
+                        android:textSize="12sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_weight="0.5"
-                    android:text="@{place.distanceString}"
-                    android:textColor="#000000" />
+                    android:gravity="right|center_vertical"
+                    android:orientation="horizontal">
 
-            </LinearLayout>
+                    <Button
+                        android:id="@+id/phone_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginRight="4dp"
+                        android:layout_marginBottom="8dp"
+                        android:backgroundTint="#FFFFFF"
+                        android:clickable="true"
+                        android:contentDescription="Tap For More Information"
+                        android:drawableRight="@drawable/ic_baseline_local_phone_24"
+                        android:src="@drawable/ic_baseline_info_24"
+                        android:text="Call"
+                        android:textSize="12sp" />
+                </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="16dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0.3"
-                android:gravity="right"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/button"
-                    android:layout_width="64dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:backgroundTint="#FFFFFF"
-                    android:contentDescription="@string/btn_loc_more_info"
-                    android:drawableRight="@drawable/ic_baseline_info_24"
-                    android:gravity="right|end"
-                    android:textAlignment="textEnd" />
             </LinearLayout>
 
         </LinearLayout>
