Change statusbar color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#D22030</color>
+    <color name="colorPrimaryDark">#D22030</color>
     <color name="colorAccent">#D81B60</color>
     <color name="ic_launcher_background">#2D4E73</color>
     <color name="red">#FF0000</color>
