Implement descriptions and screenreader TTS for descriptions

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="ic_attachment_color">#FFFFFFFF</color>
     <color name="background_color">#FFFFFFFF</color>
     <color name="ic_color_lens_color">#FFFFFFFF</color>
-
+    <color name="card_text_color">#ffffff</color>
     <color name="button_text_color">#000000</color>
     <color name="text_color">#000000</color>
 </resources>
