--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,6 +4,7 @@
     <color name="ic_attachment_color">#FFFFFFFF</color>
     <color name="background_color">#000000</color>
     <color name="card_background_color">#ffffff</color>
+    <color name="card_text_color">#000000</color>
     <color name="ic_color_lens_color">#FFFFFFFF</color>
     <color name="button_text_color">#000000</color>
     <color name="text_color">#FFFFFF</color>
