Fixed accessibility issues

--- a/app/src/main/res/layout/btdevice_list_item.xml
+++ b/app/src/main/res/layout/btdevice_list_item.xml
@@ -17,5 +17,6 @@
     <ImageView
         android:id="@+id/btdevice_list_item_icon"
         android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        android:layout_height="50dp"
+        android:contentDescription="Bluetooth icon" />
 </LinearLayout>
