--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -95,7 +95,8 @@
                         android:drawableRight="@drawable/ic_baseline_local_phone_24"
                         android:src="@drawable/ic_baseline_info_24"
                         android:text="Call"
-                        android:textSize="12sp" />
+                        android:textSize="12sp"
+                        android:focusable="true" />
                 </LinearLayout>
 
             </LinearLayout>
