--- a/app/src/main/res/layout/place_tile.xml
+++ b/app/src/main/res/layout/place_tile.xml
@@ -60,6 +60,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_weight="0.5"
+                        android:gravity="left|center_vertical"
                         android:text=""
                         android:textColor="#000000"
                         android:textSize="18sp" />
@@ -70,6 +71,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:layout_weight="0.5"
+                        android:gravity="left|center_vertical"
                         android:text="Activate to Start Navigation"
                         android:textColor="#000000"
                         android:textSize="14sp" />
@@ -87,16 +89,15 @@
                         android:id="@+id/phone_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:layout_marginRight="4dp"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginBottom="4dp"
                         android:backgroundTint="#FFFFFF"
                         android:clickable="true"
                         android:contentDescription=""
                         android:drawableRight="@drawable/ic_baseline_local_phone_24"
+                        android:focusable="true"
                         android:src="@drawable/ic_baseline_info_24"
-                        android:text="Call"
-                        android:focusable="true" />
+                        android:text="Call" />
                         android:textSize="12sp"
                         android:textSize="12sp" />
 
@@ -104,9 +105,7 @@
                         android:id="@+id/about_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
                         android:layout_marginRight="4dp"
-                        android:layout_marginBottom="8dp"
                         android:layout_weight="1"
                         android:backgroundTint="#FFFFFF"
                         android:clickable="true"
