--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -15,13 +15,13 @@
 
     </string-array>
 
-    <string-array name="entries_preferences_textSize">
-        <item>10</item>
-        <item>12</item>
+    <string-array name="distance_unit_entries">
+        <item>mile</item>
+        <item>meter</item>
     </string-array>
-    <string-array name="entry_values_preference_textSize">
-        <item>10</item>
-        <item>12</item>
+    <string-array name="distance_unit_values">
+        <item>mi</item>
+        <item>m</item>
     </string-array>
     <!-- Reply Preference -->
     <string-array name="reply_entries">
