--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -13,7 +13,17 @@
             android:icon="@drawable/ic_color_lens"
             android:key="theme"
             android:title="@string/preference_theme_title"
+            android:textColor="@color/text_color"
+            android:summary="%s"/>
+
+        <ListPreference
+            android:defaultValue="mi"
+            android:entries="@array/distance_unit_entries"
+            android:entryValues="@array/distance_unit_values"
+            android:key="dunit"
+            android:title="Distance Unit"
             android:textColor="@color/text_color"/>
+
 
     </PreferenceCategory>
 
