Update mapbox UI - created recycler view

--- a/app/src/main/res/layout/activity_directions.xml
+++ b/app/src/main/res/layout/activity_directions.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent">
 
 
+
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -73,6 +75,7 @@
             android:id="@+id/navigationTextContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="?attr/actionBarSize"
             android:layout_gravity="center|center_horizontal"
             android:orientation="vertical"
             android:visibility="visible"
@@ -89,14 +92,12 @@
                 android:textColor="@color/text_color"
                 android:textSize="36sp" />
 
-            <!--<androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/instruction_list"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/directionsRecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                app:layoutManager="LinearLayoutManager">
+                android:layout_height="match_parent"
+                />
 
-            </androidx.recyclerview.widget.RecyclerView>-->
         </LinearLayout>
     <!--</ScrollView>-->
 
