--- a/app/src/main/res/layout/directions_row.xml
+++ b/app/src/main/res/layout/directions_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- This is the basic layout for manuever instructions text. Used for recycler view in DirectionsActivity -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
