--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -21,5 +21,5 @@
         android:enabled="true"
         android:icon="@drawable/ic_web_asset_24px"
 
-        android:title="@string/tutorial_nav" />
+        android:title="@string/guide_nav" />
 </menu>
