--- a/app/src/main/res/layout/maneuver_row.xml
+++ b/app/src/main/res/layout/maneuver_row.xml
@@ -3,14 +3,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <TextView
         android:id="@+id/manueverInstruction"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/text_color"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textAlignment="center"/>
 
 </LinearLayout>
