--- a/app/src/main/res/layout/fragment_tutorial_text.xml
+++ b/app/src/main/res/layout/fragment_tutorial_text.xml
@@ -1,36 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintlayout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:scrollbars="vertical">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/tutorialNextButton"
+        android:layout_width="143dp"
+        android:layout_height="66dp"
+        android:layout_marginStart="225dp"
+        android:layout_marginEnd="41dp"
+        android:layout_marginBottom="62dp"
+        android:text="Next"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/linearLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".ui.tutorial.TutorialTextFragment">
+    <Button
+        android:id="@+id/tutorialBackButton"
+        android:layout_width="132dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="41dp"
+        android:layout_marginBottom="64dp"
+        android:text="Back"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tutorialNextButton"
+        app:layout_constraintHorizontal_bias="0.365"
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <fragment
+        android:name="com.example.appa.ui.tutorial.TutorialStep1"
+        android:id="@+id/tutorialTextFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginBottom="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/tutorialNextButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/tutorial_header"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/frag1_body"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/tutorial_body"
-            android:textColor="@color/text_color" />
-
-
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
