--- a/app/src/main/res/layout/fragment_tutorial.xml
+++ b/app/src/main/res/layout/fragment_tutorial.xml
@@ -22,12 +22,37 @@
         app:tabTextColor="#000">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemGuide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItem"
+            android:id="@+id/tabItemStep4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tab7" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemStep3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tab6" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemStep2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tab5" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemStep1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tab4" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemCane"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </com.google.android.material.tabs.TabLayout>
