--- a/app/src/main/res/layout/cane_manual.xml
+++ b/app/src/main/res/layout/cane_manual.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:scrollbars="vertical"
-            android:text="@string/tutorial_2_head"
+            android:text="@string/tutorialTabNameCaneSetup"
             android:textSize="30sp" />
 
         <TextView
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/tutorial_2_body"
+            android:text="@string/tutorial_body"
             android:textColor="@color/text_color" />
 
     </LinearLayout>
