--- a/app/src/main/res/layout/tutorial_tabs.xml
+++ b/app/src/main/res/layout/tutorial_tabs.xml
@@ -22,39 +22,42 @@
         app:tabTextColor="#000">
 
         <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemCane"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TAB1" />
+
+        <com.google.android.material.tabs.TabItem
             android:id="@+id/tabItemGuide"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItemStep4"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tab7" />
+            tools:text="TAB2" />
 
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItemStep3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab6" />
-
-        <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItemStep2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tab5" />
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tabItemStep1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Tab4" />
+            android:text="TAB3" />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/tabItemCane"
+            android:id="@+id/tabItemStep2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="TAB4" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemStep3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TAB5" />
+
+        <com.google.android.material.tabs.TabItem
+            android:id="@+id/tabItemStep4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TAB6" />
+
     </com.google.android.material.tabs.TabLayout>
 
     <androidx.viewpager.widget.ViewPager
