--- a/app/src/main/res/layout/compass_layout.xml
+++ b/app/src/main/res/layout/compass_layout.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="50dp">
 
     <TextView
         android:id="@+id/compass_instruction"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/background_color"
         android:text=""
         android:textColor="@color/text_color"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
