--- a/app/src/main/res/layout/tutorial_content_step1.xml
+++ b/app/src/main/res/layout/tutorial_content_step1.xml
@@ -8,11 +8,11 @@
         android:id="@+id/tutorialContentHeaderStep1"
         android:layout_width="match_parent"
         android:layout_height="63dp"
-        android:text="TextView" />
+        android:text="@string/tutorialContentHeaderStep1" />
 
     <TextView
         android:id="@+id/tutorialContendBodyStep1"
         android:layout_width="match_parent"
         android:layout_height="141dp"
-        android:text="TextView" />
+        android:text="@string/tutorialContentBodyStep1" />
 </LinearLayout>
