--- a/app/src/main/res/layout/tutorial_content_step4.xml
+++ b/app/src/main/res/layout/tutorial_content_step4.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tutorialContentHeaderStep4"
         android:layout_width="575dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="@string/tutorialContentHeaderStep4" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tutorialContentBodyStep4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:text="@string/tutorialContentBodyStep4" />
 </LinearLayout>
