--- a/app/src/main/res/layout/tutorial_content_overview.xml
+++ b/app/src/main/res/layout/tutorial_content_overview.xml
@@ -7,12 +7,17 @@
     <TextView
         android:id="@+id/tutorialContentHeaderOverview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tutorialContentHeaderOverview" />
+        android:layout_height="82dp"
+        android:text="@string/tutorialContentHeaderOverview"
+        android:textSize="35sp"
+        android:textColor="#000000"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tutorialContentBodyOverview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textColor="#000000"
         android:text="@string/tutorialContentBodyOverview" />
 </LinearLayout>
