--- a/app/src/main/res/layout/tutorial_content_step1.xml
+++ b/app/src/main/res/layout/tutorial_content_step1.xml
@@ -7,12 +7,17 @@
     <TextView
         android:id="@+id/tutorialContentHeaderStep1"
         android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:text="@string/tutorialContentHeaderStep1" />
+        android:layout_height="82dp"
+        android:text="@string/tutorialContentHeaderStep1"
+        android:textSize="35sp"
+        android:textColor="#000000"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tutorialContendBodyStep1"
         android:layout_width="match_parent"
         android:layout_height="141dp"
+        android:textSize="15sp"
+        android:textColor="#000000"
         android:text="@string/tutorialContentBodyStep1" />
 </LinearLayout>
