--- a/app/src/main/res/layout/tutorial_content_step2.xml
+++ b/app/src/main/res/layout/tutorial_content_step2.xml
@@ -7,13 +7,18 @@
     <TextView
         android:id="@+id/tutorialContentHeaderStep2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tutorialContentHeaderStep2" />
+        android:layout_height="82dp"
+        android:text="@string/tutorialContentHeaderStep2"
+        android:textSize="35sp"
+        android:textColor="#000000"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tutorialContentBodyStep2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textColor="#000000"
         android:text="@string/tutorialContentBodyStep2" />
 
 </LinearLayout>
