--- a/app/src/main/res/layout/tutorial_content_step3.xml
+++ b/app/src/main/res/layout/tutorial_content_step3.xml
@@ -7,12 +7,16 @@
     <TextView
         android:id="@+id/tutorialContentHeaderStep3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/tutorialContentHeaderStep3" />
+        android:text="@string/tutorialContentHeaderStep3"
+        android:textSize="35sp"
+        android:layout_height="82dp"
+        android:textColor="#000000"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tutorialContentBodyStep3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
         android:text="@string/tutorialContentBodyStep3" />
 </LinearLayout>
