--- a/app/src/main/res/layout/tutorial_content_step4.xml
+++ b/app/src/main/res/layout/tutorial_content_step4.xml
@@ -6,15 +6,18 @@
 
     <TextView
         android:id="@+id/tutorialContentHeaderStep4"
-        android:layout_width="575dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/tutorialContentHeaderStep4" />
+        android:layout_width="wrap_content"
+        android:layout_height="82dp"
+        android:text="@string/tutorialContentHeaderStep4"
+        android:textColor="#000000"
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tutorialContentBodyStep4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textColor="#000000"
         android:text="@string/tutorialContentBodyStep4" />
 </LinearLayout>
