--- a/app/src/main/res/layout/tutorial_content_step1.xml
+++ b/app/src/main/res/layout/tutorial_content_step1.xml
@@ -7,17 +7,17 @@
     <TextView
         android:id="@+id/tutorialContentHeaderStep1"
         android:layout_width="match_parent"
-        android:layout_height="82dp"
+        android:layout_height="156dp"
         android:text="@string/tutorialContentHeaderStep1"
-        android:textSize="35sp"
         android:textColor="#000000"
-        android:textStyle="bold"/>
+        android:textSize="35sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tutorialContendBodyStep1"
         android:layout_width="match_parent"
-        android:layout_height="141dp"
-        android:textSize="15sp"
+        android:layout_height="393dp"
+        android:text="@string/tutorialContentBodyStep1"
         android:textColor="#000000"
-        android:text="@string/tutorialContentBodyStep1" />
+        android:textSize="15sp" />
 </LinearLayout>
